k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsacademy
  labels:
    name: opsacademy
    environment: production
