k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opsacademy-ingress
  namespace: opsacademy
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "opsacademy-server"
spec:
  ingressClassName: nginx
  rules:
    - host: api.opsacademy.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opsacademy-server
                port:
                  number: 4000
